add .descriçao class and stilyng the .paragrafo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
         <img src="./assets/pexels-felixmittermeier-956981.jpg" alt="fundo">
     </div>
 
+    <div class="descriçao">
     <p class="paragrafo"> Transforme sua alimentação e alcance seus objetivos de perda de peso com nosso ebook completo de receitas para emagrecimento! Descubra deliciosas receitas balanceadas, dicas de nutrição e planos alimentares personalizados. Com ingredientes fáceis de encontrar e preparações simples, você terá tudo o que precisa para emagrecer de forma saudável e sustentável. Comece hoje sua jornada rumo a uma vida mais saudável e saborosa!</p>
+    </div>
+
 <footer>
     <p></p> 
 </footer>
